<resources>
    <string name="app_name">Control Reminder</string>
    <string name="nama_kontrol">Nama Kontrol</string>
    <string name="lokasi_kontrol">Lokasi</string>
    <string name="tanggal_kontrol">Tanggal Kontrol</string>
    <string name="waktu_kontrol">Waktu Kontrol</string>
    <string name="ulangi">Ulangi</string>
    <string name="ingatkan">Ingatkan</string>
    <string name="dbl_dot"> : </string>
    <string name="btnBack">BACK</string>
    <string name="btnClear">CLEAR</string>
    <string name="btnSave">SAVE</string>
</resources>
